k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cardimed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: gitlab-registry

      containers:
        - name: frontend
          image: ${CI_REGISTRY_IMAGE}/cardimedfrontend:${IMAGE_TAG}
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
