k8s/mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: cardimed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0
          ports:
            - containerPort: 1883
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
      volumes:
        - name: config
          configMap:
            name: mosquitto-config

---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: cardimed
spec:
  selector:
    app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
